[package]
name = "sp_draw"
version = "0.0.0"
edition = "2021"

[dependencies]
glam = { version = "0.20.2" }
bytemuck = { version = "1.7.3", features = [ "derive" ] }
indexmap = { version = "1.9.1" }

sp_math = { path = "../sp_math", version = "0.0.0" }
sp_asset = { path = "../sp_asset", version = "0.0.0" }
