[package]
name = "sp_trace"
version = "0.0.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"

# Compatible with tracy 0.8.1
tracing-tracy = { version = "0.9.0", optional = true }

[features]
tracy = ["dep:tracing-tracy"]