[package]
name = "sp_ui"
version = "0.0.0"
edition = "2021"

[dependencies]
glam = { version = "0.20.2" }
indexmap = { version = "1.9.1" }
bitflags = "1.3.2"
serde = { version = "1.0.136" }
serde_derive = { version = "1.0.136" }

sp_math = { path = "../sp_math", version = "0.0.0" }
sp_asset = { path = "../sp_asset", version = "0.0.0" }
