[package]
name = "sp_winit"
version = "0.0.0"
edition = "2021"

[dependencies]
glam = { version = "0.20.2" }
winit = { version = "0.27.5" }
log = "0.4.14"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
pollster = "0.2.5"
spin_sleep = "1.1.1"
clipboard = "0.5.0"

sp_input = { path = "../sp_input", version = "0.0.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.53", features = [
    "Element",
    "Window",
    "ClipboardEvent",
    "DataTransfer",
]}
